// $Id$

TO DO
-----
- Reimplement: Choose an existing node as a translation, http://drupal.org/node/295682
- Taxonomy autocomplete, localized terms
- Add language filter to search form
- Support for translation of some node strings, #313840
- Better information for theme variables on settings page

6.x-beta6 to .........
----------------------
- Mark translations a outdated when source string changes, by nedjo, #355366
- Changed default behavior: content types with multilingual support disabled are now language neutral, #270655 
- Added i18n menu handling to node form, by Roger López, Stella, #348444
- Added additional language support level, by stella, Roger Lopez, #349193
- Fixed duplicated 'ts' function (CiviCRM), renamed to 'i18nstrings_ts', by mfb, #298154
- Move all admin settings to one place under Language, by stella, #343557
- CCK file fields not removed anymore when one of the translations is deleted, #313613
- Fixed: uploaded files removed when one of the translations is deleted, #313613
- Fixed issue with file sync list option, by nkoponen, #298327
- Added clean up feature to i18nstrings refresh
- Fixed multiple issues with content type strings translations, #343335
- Added some more parameter checking for i18nviews module, #294278
- Fixed issues with i18nstrings and menu items, by smk-ka, catch, sun, nedjo, #339057
- Fixed i18ntaxonomy schema mismatch (missing schema_alter), #288994
- Added index for locale table's location field, by sun, #349488
- Removed deprecated i18n_get_links().
- Tentative fix for: Story shows multiple times on front page, #334670
- Simplified mixed content selection logic
- Added content selection for views, by Jax, #283845
- Implemented workaround for race condition, #277711

6.x-beta4 to 6.x-beta6 (Rolled out beta5 with some errors so did a new release)
------------------------------------------------------------------------------
- Fixed multilingual blocks not translating, #305868