@@ -40,30 +40,6 @@ function i18n_init() {
       $_GET['q'] = drupal_get_normal_path(variable_get('site_frontpage', 'node'));
     }
   }
-  // Add a JS file for node forms.
-  // Determine if we are either editing or translating an existing node.
-  // We can't act on regular node creation because we don't have a specified
-  // node language.
-  $node_edit = $node = menu_get_object() && arg(2) == 'edit' && isset($node->language) && !empty($node->language);
-  $node_translate = arg(0) == 'node' && arg(1) == 'add' && !empty($_GET['translation']) && !empty($_GET['language']);
-  if ($node_edit || $node_translate) {
-    $node_language = $node_edit ? $node->language : $_GET['language'];
-    // Only needed if the node language is different from the interface one.
-    if ($node->language != $language->language) {
-      $languages = language_list();
-      if (isset($languages[$node_language])) {
-        drupal_add_js(drupal_get_path('module', 'i18n') . '/i18n.js');
-        // Pass the interface and content language base paths.
-        // Remove any trailing forward slash. Doing so prevents a mismatch
-        // that occurs when a language has no prefix and hence gets a path
-        // with a trailing forward slash.
-        $interface = rtrim(url('', array('absolute' => TRUE)), '/');
-        $content = rtrim(url('', array('absolute' => TRUE, 'language' => $languages[$node_language])), '/');
-        $data = array('interface' => $interface, 'content' => $content);
-        drupal_add_js(array('i18n' => $data), 'setting');
-      }
-    }
-  }
 }
 
 /**
@@ -634,6 +610,21 @@ function i18n_variable_init($langcode = NULL, $prefix = '') {
     }
 
     $conf = array_merge($conf, $i18n_conf);
+  }
+}
+
+/**
+ * Get language from context
+ */
+function _i18n_get_context_lang() {
+  // Node language when loading specific nodes or creating translations.
+  if (arg(0) == 'node' ) {
+    if (($node = menu_get_object('node')) && $node->language) {
+      return $node->language;
+    }
+    elseif (arg(1) == 'add' && !empty($_GET['translation']) && !empty($_GET['language'])) {
+      return $_GET['language'];
+    }
   }
 }
 
